@@ -64,6 +64,7 @@ class DeprecatedHooks {
 		'PrefixSearchBackend' => [ 'deprecatedVersion' => '1.27', 'silent' => true ],
 		'ResourceLoaderTestModules' => [ 'deprecatedVersion' => '1.33' ],
 		'RevisionInsertComplete' => [ 'deprecatedVersion' => '1.31' ],
+		'RollbackComplete' => [ 'deprecatedVersion' => '1.36', 'silent' => true ],
 		'SecondaryDataUpdates' => [ 'deprecatedVersion' => '1.32', 'silent' => true ],
 		'SpecialMuteSubmit' => [ 'deprecatedVersion' => '1.35', 'silent' => true ],
 		'SkinTemplateBuildNavUrlsNav_urlsAfterPermalink' => [ 'deprecatedVersion' => '1.35' ],
